--- a/LookingForGroup/src/main/res/layout/user_profile.xml
+++ b/LookingForGroup/src/main/res/layout/user_profile.xml
@@ -1,54 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
-                android:layout_height="match_parent" android:orientation="vertical"
-                android:id="@+id/user_profile" android:background="@color/colorPrimaryLight">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/user_profile"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimaryLight"
+    android:orientation="vertical">
 
     <Button
-            android:text="Logout"
-            style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/logou_button"
-            android:layout_alignParentBottom="true" android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"/>
+        android:id="@+id/logou_button"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/logout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp" app:srcCompat="@color/colorAccent"
-            android:id="@+id/profile_summoner_icon"
-            android:layout_below="@+id/profile_picture" android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" android:layout_marginRight="23dp" android:layout_marginEnd="23dp"/>
+        android:id="@+id/profile_summoner_icon"
+        android:layout_width="188dp"
+        android:layout_height="200dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="189dp"
+        android:contentDescription="@string/todo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@color/colorAccent" />
+
     <TextView
-            android:text="@string/summoner_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/summoner_name"
-            android:layout_below="@+id/server" android:layout_centerHorizontal="true" android:layout_marginTop="13dp"/>
+        android:id="@+id/summoner_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="60dp"
+        android:text="@string/summoner_name"
+        app:layout_constraintStart_toEndOf="@+id/profile_summoner_icon"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
-            android:text="TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="23dp" android:id="@+id/profile_lvl" android:layout_alignBottom="@+id/profile_summoner_icon"
-            android:layout_alignRight="@+id/summoner_name" android:layout_alignEnd="@+id/summoner_name"/>
+        android:id="@+id/profile_lvl"
+        android:layout_width="110dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="20dp"
+        android:text="@string/summoner_level"
+        app:layout_constraintStart_toEndOf="@+id/profile_summoner_icon"
+        app:layout_constraintTop_toBottomOf="@+id/server" />
+
     <TextView
-            android:text="No server"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/server"
-            android:layout_alignTop="@+id/profile_summoner_icon" android:layout_alignRight="@+id/summoner_name"
-            android:layout_alignEnd="@+id/summoner_name"/>
-    <ImageView
-            app:srcCompat="@color/colorAccent"
-            android:id="@+id/profile_picture"
-            android:layout_width="100dp" android:layout_height="100dp"
-            android:layout_below="@+id/username" android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" android:layout_marginLeft="14dp" android:layout_marginStart="14dp"/>
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/username"
-            android:text="@string/no_username"
-            android:layout_marginTop="24dp"
-            android:layout_alignParentTop="true" android:layout_alignLeft="@+id/profile_picture"
-            android:layout_alignStart="@+id/profile_picture"/>
-</RelativeLayout>
+        android:id="@+id/server"
+        android:layout_width="110dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="20dp"
+        android:text="@string/no_server"
+        app:layout_constraintStart_toEndOf="@+id/profile_summoner_icon"
+        app:layout_constraintTop_toBottomOf="@+id/summoner_name" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
